--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
       POSTGRES_PASSWORD: 14-10=4
       POSTGRES_DB: smart-brain-docker
       POSTGRES_HOST: postgres
+      REDIS_URI: redis://redis:6379
     links:
       - postgres
+      - redis
     ports:
       - "3000:3000"
     # Postgres
@@ -27,3 +29,9 @@ services:
       POSTGRES_PASSWORD: 14-10=4
       POSTGRES_DB: smart-brain-docker
       POSTGRES_HOST: postgres
+
+    # Redis
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
